# fastchat-serve

./: .gitignore  deploy.Dockerfile  docker-compose.yml  launch_worker.sh  pyproject.toml  requirements.docker.txt
config/: multi_model_worker.json  vllm_worker.json
src/fastchat_serve/: base_model_worker.py  controller.py  model_worker.py  model_worker_v1.py  multi_model_worker.py  multi_model_worker_v1.py  openai_api_server copy.py  openai_api_server_vllm.py  vllm_worker.py  vllm_worker_v1.py
src/fastchat_serve/benchmark/: README.md  benchmark_openai_api.py  benchmark_openai_api_beam_search.py  benchmark_openai_api_beam_search_no_stream.py  benchmark_openai_api_sharegpt.py  utils.py
src/fastchat_serve/config/: multi_model_worker.json  vllm_worker.json
src/fastchat_serve/openai/: api_server.py  protocol.py
src/fastchat_serve/protocol/: api_protocol.py  openai_api_protocol_v1.py
src/fastchat_serve/utils/: config_parser.py
